--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,11 @@ body{
 .container{
     width: 90%;
     max-width: 500px;
-    min-height: 50%;
     margin: 100px auto 0px;
     color: rgb(58, 58, 58);
     border-radius: 25px;
     padding: 25px 35px;
+    padding-bottom: 85px;
     background-color: white;
 }
 .container .head{
@@ -65,7 +65,7 @@ body{
     color: orangered;
 }
 
-.container .listing ul li{
+ul li{
     list-style: none;
     font-size: 17px;
     padding:12px 8px 12px 50px;
@@ -74,7 +74,7 @@ body{
     position: relative;
 }
 
-.container .listing ul li::before {
+ul li::before {
     background-image: url(icons/unchecked.png);
     height: 28px;
     position: absolute;
@@ -86,6 +86,27 @@ body{
     top: 12px;
     left: 8px;
 }
-ul li::after {
+ul li.checked{
+    color: #555;
+    text-decoration: line-through;
+}
+
+ul li.checked::before {
     background-image: url(icons/checked.png);
 }
+
+
+
+
+
+
+
+
+/* .container .clearAll img{
+    margin: 30px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 25px;
+    width: 40px;
+    padding: 5px;
+    border: 1px solid orangered;
+} */
