feat - save files on local storage

--- a/styles.css
+++ b/styles.css
@@ -112,19 +112,11 @@ ul li span:hover{
 }
 
 
-
-
-
-
-
-
-
-
-/* .container .clearAll img{
+.container .clearAll img{
     margin: 30px;
     background-color: rgb(255, 255, 255);
     border-radius: 25px;
     width: 40px;
     padding: 5px;
     border: 1px solid orangered;
-} */
+}
